# django-htmx-tictactoe

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  tailwind.config.js
tests/test_project/: manage.py
tests/test_project/templates/: base.html
tests/test_project/tictactoe/: settings.py  urls.py
tictactoe/: settings.py  urls.py
tictactoe_app/: apps.py  models.py  urls.py  views.py
tictactoe_app/migrations/: 0001_initial.py  0002_game_winner.py  0003_alter_game_board_ary.py  0004_game_locked_by.py
tictactoe_app/static/tictactoe_app/: output.css
tictactoe_app/templates/tictactoe_app/: base.html  base_ttt.html  games.html  start.html  ttt.html
tictactoe_app/utilities/: GameOO.py
